frontend/src/components/CSS/Homepage.css
.Homepage {
  background: var(--background);
  /* background-image: var(--background-image); */
  background-color: var(--background);
  background-size: cover;
  display: flex;
  flex-direction: column;
}

.homepage-text {
  text-align: left;
  font-weight: bold;
  padding-top: 0%;
  padding-bottom: 0;
  margin-top: 0.5em !important;
  margin-bottom: 0.5rem !important;
  color: var(--title-text);
}

.container-fluid {
  padding-right: 3rem;
  padding-left: 3rem;
  margin-right: auto;
  margin-left: auto;
  overflow: auto;
}

.card-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: flex-start;
  align-items: stretch;
  margin-bottom: 1rem;
  border: 2px solid var(--card-border);
}

.card-custom {
  position: relative;
  border-radius: 10px;
  overflow: hidden;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
  flex: 1 0 calc(33.333% - 40px);
}

.card-img-top {
  width: 100%;
  height: 12rem;
  object-fit: cover;
  /* Ensure images cover the card area properly */
  object-position: center;
}

.card-body {
  max-height: 12vh;
  min-height: 12vh;
  background: #e3d2b3;
  opacity: 0.9;
  overflow: visible;
  height: 20px;
}

.homepage-button {
  border: 1px solid var(--btn-color);
  background-color: var(--btn-color);
  cursor: pointer;
  border-radius: 5px;
  text-align: center;
  width: 40%;
  color: var(--btn-text-color);
  font-weight: bold;
  padding-top: 5px;
  padding-bottom: 5px;
  border-radius: 10px;
}

.homepage-button:hover {
  background-color: var(--btn-color-hover);
  color: var(--btn-text-color);
}

.card-title {
  font-size: 20px;
  margin-bottom: 10px;
  color: var(--card-title);
  margin-left: 15px;
}

.card-actions {
  top: 0.8rem;
  right: 0.8rem;
  display: flex;
  gap: 15px;
  flex-direction: row;
  justify-content: space-around;
}

/* Slick Carousel Customizations */
.slick-slide {
  margin-left: 1em;
  margin-right: 1em;
}

.slick-list {
  margin: 0 -15px;
}

.slick-track {
  display: flex;
  align-items: center;
  justify-content: space-around;
}

.slick-prev,
.slick-next {
  z-index: 1;
}

.slick-prev {
  left: -25px;
}

.slick-next {
  right: -25px;
}

.slick-prev:before,
.slick-next:before {
  color: black;
}

@media (max-width: 1024px) {
  .card-custom {
    flex: 1 0 calc(50% - 20px);
    /* Adjust so two cards fit within the space */
  }
  .card-body {
    padding: 0.8rem;
  }
}

@media (max-width: 600px) {
  .card-custom {
    flex: 1 0 calc(100% - 20px);
    /* Adjust so one card fits within the space */
  }
  .card-body {
    padding: 0.5rem;
  }
}

/* Import Slick Carousel styles */
@import "~slick-carousel/slick/slick.css";
@import "~slick-carousel/slick/slick-theme.css";

